--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/themes": "^1.1.2",
     "@rsuite/icons": "^1.0.3",
+    "@stitches/react": "^1.2.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
